# ScriptingCPP

./: .gitignore  CMakeLists.txt  MemoryPool.h  framework.h  main.cpp  platform.h  scriptingEvaluator.h  scriptingNodes.h  scriptingParser.cpp  scriptingParser.h  visitorList.h
include/: AADExpr.h  AADNode.h  AADNumber.h  AADTape.h  ConcurrentQueue.h  blocklist.h  functDomain.h  gaussians.h  packIncludes.h  quickStack.h  scriptingConstCondProc.h  scriptingDebugger.h  scriptingDomainProc.h  scriptingEvaluator.h  scriptingFuzzyEval.h  scriptingNodes.h  scriptingParser.h  scriptingProduct.h  scriptingVisitor.h  scriptingVisitorImpl.h  visitorHeaders.h  visitorList.h
src/: AADGlobals.cpp  main.cpp  scriptingParser.cpp  xlApi.cpp
